# Keepers

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
app/e2e/: culling-workflow.spec.ts
app/src/: App.css  App.tsx  index.css
app/src/components/: ExcludedPhotosNotice.tsx  PhotoDropzone.tsx  PhotoGroup.tsx  PhotoGroups.tsx  SelectedPhotoCard.tsx  SelectedPhotoGrid.tsx  WorkflowStatus.tsx
app/src/features/photos/: decodePhoto.ts  fileValidation.ts  photoUrls.ts  qualityExplanations.ts  types.ts  usePhotoWorkflow.ts  workflowSteps.ts
app/src/photos/: decodePhoto.ts  photoValidation.ts  types.ts
app/src/pipeline/: constants.ts
app/src/wasm/: KeepersClient.ts  KeepersWasmError.ts  WasmAllocation.ts  client.ts  keepers-module.d.ts  loadKeepersModule.ts  types.ts
app/src/workers/: AnalysisWorkerClient.ts  analysisProtocol.ts  analysisWorker.ts
engine/: CMakeLists.txt
engine/include/burstpick/: grayscale.hpp  image_metrics.hpp  image_view.hpp  sharpness.hpp  version.hpp
engine/include/keepers/: difference_hash.hpp  grayscale.hpp  image_metrics.hpp  image_view.hpp  photo_analysis.hpp  photo_quality.hpp  sharpness.hpp  similarity_grouping.hpp  version.hpp
engine/src/: difference_hash.cpp  grayscale.cpp  image_metrics.cpp  image_view.cpp  photo_analysis.cpp  photo_quality.cpp  sharpness.cpp  similarity_grouping.cpp  version.cpp
engine/tests/: CMakeLists.txt  difference_hash_test.cpp  grayscale_test.cpp  image_metrics_test.cpp  image_view_test.cpp  photo_analysis_test.cpp  photo_quality_test.cpp  sharpness_test.cpp  similarity_grouping_test.cpp  version_test.cpp
scripts/: build-wasm.sh  copy-wasm-to-app.sh  smoke-test-wasm.mjs
wasm/: CMakeLists.txt
wasm/include/keepers/: wasm_api.h
wasm/src/: wasm_api.cpp
